--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <section class="flex mt-5 space-y-5 flex-col items-center ">
         <h1 class="text-2xl text-black">Users Table</h1>
-        <p class="text-white ">Search through the list below by username</p>
+        <p class="text-black">Search through the list below by username</p>
         <div>
             <form action="">
                 <input type="text" id="search"
